# LRCScroll.lmms

./: .gitignore  README.md
assets/: logo.al4
plugin/: CMakeLists.txt  LRCScroll.cpp  LRCScroll.h  LRCScrollKeyFilter.cpp  LRCScrollKeyFilter.h  LRCScrollView.cpp  LRCScrollView.h  README.md  TimestampEditor.cpp  TimestampEditor.h  VerticalMarquee.cpp  VerticalMarquee.h
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  README.md  TextScrollerWidget.h  VerticalMarquee.cpp  lyrics.txt  main.cpp
test/CustomWindowResize/: README.md
test/CustomWindowResize/src/: CMakeLists.txt  CustomWindow.cpp  CustomWindow.h  README.md  main.cpp
test/TextWidget/: TextScrollerWidget.cpp  main.cpp
test/VerticalMarquee/: VerticalMarquee.cpp  VerticalMarquee.h  main.cpp
test/others/: shadow.cpp
